--- a/app/templates/auth/forgot_password.html
+++ b/app/templates/auth/forgot_password.html
@@ -3,24 +3,17 @@
 {% block title %}Forgot Password{% endblock %}
 
 {% block app_content %}
-<div class="col-12">
-    <h1>Forgot Password</h1>
-    <form action="{{ url_for('auth.forgot_password') }}"  method="post">
-        {{ form.csrf_token }}
-        <div class="form-row">
-            <div class="form-group col-lg-8">
-                {{ form.email.label }}
-                {% for error in form.email.errors %}
-                    <span style="color: red;">[ {{ error }} ]</span><br/>
-                {% endfor %}
-                {{ form.email(class="form-control") }}
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-lg-8">
-                {{ form.submit(class="btn btn-md btn-buttons") }}
-            </div>
-        </div>
-    </form>
-</div>
+<h2>Forgot Password</h2>
+<form action="{{ url_for('auth.forgot_password') }}"  method="post">
+    {{ form.csrf_token }}
+    <div class="formgrid">
+        {{ form.email.label }}
+        {% for error in form.email.errors %}
+            <span style="color: red;">[ {{ error }} ]</span><br/>
+        {% endfor %}
+        {{ form.email }}
+
+        {{ form.submit(class="submit-btn") }}
+    </div>
+</form>
 {% endblock %}
