--- a/app/templates/post/_tinymce.html
+++ b/app/templates/post/_tinymce.html
@@ -19,6 +19,7 @@
       {text: 'CSS', value: 'css'},
       {text: 'Processing', value: 'processing'},
       {text: 'Python', value: 'python'}
-    ]
+    ],
+    width: "100%",
     });
 </script>
