--- a/app/templates/admin_image/del_image.html
+++ b/app/templates/admin_image/del_image.html
@@ -3,27 +3,17 @@
 {% block title %}Delete Image{% endblock %}
 
 {% block app_content %}
-<div class="col-12">
-    <h1>Delete Image</h1>
+<h2>Delete Image</h2>
 
-    <form action="{{ url_for('admin_image.del_image',id=img.id) }}"  method="post">
-        {{ form.csrf_token }}
-        <p>Are you sure you want to delete the image? Note that this image may currently be used in one of your post.</p>
-        <p>
-            <img src="{{ url_for('static',filename='uploads/thumbnails/' ~ img.thumbnail) }}"><br/>
-            <small class="text-muted">../static/uploads/{{ img.filename }}</small><br/>
-            <small class="text-muted">{{ img.file_width }}x{{ img.file_height }}</small><br/>
-            <small class="text-muted">{{ img.file_size }} bytes</small><br/>
-            <small class="text-muted">Uploaded: {{ moment(img.create_date).format('DD/MM/YY') }}</small>
-        </p>
-        <div class="form-group">
-            {{ form.submit(class="btn btn-md btn-buttons") }}
-        </div>
-    </form>
-</div>
-{% endblock %}
-
-{% block scripts %}
-    {{ super() }}
-    {{ moment.include_moment() }}
+<form action="{{ url_for('admin_image.del_image',id=img.id) }}"  method="post">
+    {{ form.csrf_token }}
+    <p>Are you sure you want to delete the image? Note that this image may currently be used in one of your post.</p>
+    <p><img src="{{ url_for('static',filename='uploads/thumbnails/' ~ img.thumbnail) }}">
+        <div class="minor-text">../static/uploads/{{ img.filename }}</div>
+        <div class="minor-text">{{ img.file_width }}x{{ img.file_height }}</div>
+        <div class="minor-text">{{ img.file_size }} bytes</div>
+        <div class="minor-text">Uploaded: {{ moment(img.create_date).format('DD/MM/YY') }}</div>
+    </p>
+    {{ form.submit(class="delete-btn") }}
+</form>
 {% endblock %}
