--- a/app/templates/admin_tag/del_tag.html
+++ b/app/templates/admin_tag/del_tag.html
@@ -3,15 +3,11 @@
 {% block title %}Delete Tag{% endblock %}
 
 {% block app_content %}
-<div class="col-12">
-    <h1>Delete Tag</h1>
+<h2>Delete Tag</h2>
 
-    <form action="{{ url_for('admin_tag.del_tag',id=tag.id) }}"  method="post">
-        {{ form.csrf_token }}
-        <p>Are you sure you want to delete the tag <strong>{{ tag.name }}</strong>?</p>
-        <div class="form-group">
-            {{ form.submit(class="btn btn-md btn-buttons") }}
-        </div>
-    </form>
-</div>
+<form action="{{ url_for('admin_tag.del_tag',id=tag.id) }}"  method="post">
+    {{ form.csrf_token }}
+    <p>Are you sure you want to delete the tag <strong>{{ tag.name }}</strong>?</p>
+    {{ form.submit(class="delete-btn") }}
+</form>
 {% endblock %}
