--- a/app/templates/admin_tag/edit_tag.html
+++ b/app/templates/admin_tag/edit_tag.html
@@ -3,22 +3,19 @@
 {% block title %}Edit Tag{% endblock %}
 
 {% block app_content %}
-<div class="col-12">
-    <h1>Edit Tag</h1>
+<h2>Edit Tag</h2>
 
-    <form action="{{ url_for('admin_tag.edit_tag',id=tag.id) }}"  method="post">
-        {{ form.csrf_token }}
-        <div class="form-group">
-            {{ form.tag_name.label }}
-            {% for error in form.tag_name.errors %}
-                <span style="color: red;">[ {{ error }} ]</span><br/>
-            {% endfor %}
-            {% set t = form.tag_name.process_data(tag.name) %}
-            {{ form.tag_name(class="form-control") }}
-        </div>
-        <div class="form-group">
-            {{ form.submit(class="btn btn-md btn-buttons") }}
-        </div>
-    </form>
-</div>
+<form action="{{ url_for('admin_tag.edit_tag',id=tag.id) }}"  method="post">
+    {{ form.csrf_token }}
+    <div class="formgrid">
+        {{ form.tag_name.label }}
+        {% for error in form.tag_name.errors %}
+            <span style="color: red;">[ {{ error }} ]</span><br/>
+        {% endfor %}
+        {% set t = form.tag_name.process_data(tag.name) %}
+        {{ form.tag_name }}
+
+        {{ form.submit(class="submit-btn") }}
+    </div>
+</form>
 {% endblock %}
