--- a/app/templates/admin_tag/manage_tags.html
+++ b/app/templates/admin_tag/manage_tags.html
@@ -3,47 +3,41 @@
 {% block title %}Manage Tags{% endblock %}
 
 {% block app_content %}
-<h1>Manage Tags</h1>
+<h2>Manage Tags</h2>
 
-<div class="col-12 pt-4">
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-            <a class="nav-link active" data-toggle="tab" href="#tag_used">Tags used</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#tag_not_used">Tags not used</a>
-        </li>
-    </ul>
-
-    <div class="tab-content pt-4">
-        <div id="tag_used" class="tab-pane fade show active">
-            <p>To delete these tags, first remove them from all blog postings</p>
-            <table class="table table-sm table-striped">
-                <tbody>
-                    {% for tu in tag_used %}
-                        <tr class="d-flex">
-                            <td scope="row" class="col-4">{{ tu.name }}</td>
-                            <td class="col-8"><a href="{{ url_for('admin_tag.edit_tag',id=tu.id) }}" class="btn btn-admin btn-sm" role="button">Edit</a></td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
-
-        <div id="tag_not_used" class="tab-pane fade">
-            <table class="table table-sm table-striped">
-                <tbody>
-                    {% for tnu in tag_notused %}
-                        <tr class="d-flex">
-                            <td scope="row" class="col-4">{{ tnu.name }}</td>
-                            <td class="col-8"><a href="{{ url_for('admin_tag.edit_tag',id=tnu.id) }}" class="btn btn-admin btn-sm" role="button">Edit</a>
-                            <a href="{{ url_for('admin_tag.del_tag',id=tnu.id) }}" class="btn btn-admin btn-sm" role="button">Delete</a></td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    </div>
+<div class="tab">
+    <button id="defaultOpen" class="tablinks" onclick="openTab(event,'tagused-tab')">Tags used</button>
+    <button class="tablinks" onclick="openTab(event,'tagnotused-tab')">Tags not used</button>
 </div>
 
+<div id="tagused-tab" class="tabcontent">
+    <p>To delete these tags, first remove them from all blog postings</p>
+    <table class="table-stripe">
+        {% for tu in tag_used %}
+            <tr>
+                <td>{{ tu.name }}</td>
+                <td><a href="{{ url_for('admin_tag.edit_tag',id=tu.id) }}">edit</a></td>
+            </tr>
+        {% endfor %}
+    </table>
+</div>
+
+<div id="tagnotused-tab" class="tabcontent">
+    <table class="table-stripe">
+        {% for tnu in tag_notused %}
+            <tr>
+                <td>{{ tnu.name }}</td>
+                <td><a href="{{ url_for('admin_tag.edit_tag',id=tnu.id) }}">edit</a>
+                <a href="{{ url_for('admin_tag.del_tag',id=tnu.id) }}">delete</a></td>
+            </tr>
+        {% endfor %}
+    </table>
+</div>
+{% endblock %}
+
+{% block scripts %}
+<script>
+    // Get the element with id="defaultOpen" and click on it
+    document.getElementById("defaultOpen").click();
+</script>
 {% endblock %}
