--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -3,33 +3,23 @@
 {% block title %}Reset Password{% endblock %}
 
 {% block app_content %}
-<div class="col-12">
-    <h1>Reset Password</h1>
-    <form action=""  method="post">
-        {{ form.csrf_token }}
-        <div class="form-row">
-            <div class="form-group col-lg-8">
-                {{ form.password.label }}
-                {% for error in form.password.errors %}
-                    <span style="color: red;">[ {{ error }} ]</span>
-                {% endfor %}
-                {{ form.password(class="form-control") }}
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-lg-8">
-                {{ form.password2.label }}
-                {% for error in form.password2.errors %}
-                    <span style="color: red;">[ {{ error }} ]</span>
-                {% endfor %}
-                {{ form.password2(class="form-control") }}
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-lg-8">
-                {{ form.submit(class="btn btn-md btn-primary") }}
-            </div>
-        </div>
-    </form>
-</div>
+<h2>Reset Password</h2>
+<form action="" method="post">
+    {{ form.csrf_token }}
+    <div class="formgrid">
+        {{ form.password.label }}
+        {% for error in form.password.errors %}
+            <span style="color: red;">[ {{ error }} ]</span>
+        {% endfor %}
+        {{ form.password }}
+
+        {{ form.password2.label }}
+        {% for error in form.password2.errors %}
+            <span style="color: red;">[ {{ error }} ]</span>
+        {% endfor %}
+        {{ form.password2 }}
+
+        {{ form.submit(class="submit-btn") }}
+    </div>
+</form>
 {% endblock %}
