--- a/app/templates/post/add_post.html
+++ b/app/templates/post/add_post.html
@@ -3,41 +3,33 @@
 {% block title %}Add Post{% endblock %}
 
 {% block app_content %}
-<div class="col-12">
-    <h1>Add Post</h1>
+<h2>Add Post</h2>
 
-    <form action="{{ url_for('post.add_post') }}"  method="post">
-        {{ form.csrf_token }}
-        <div class="form-group">
-            {{ form.heading.label }}
-            {% for error in form.heading.errors %}
-                <span style="color: red;">[ {{ error }} ]</span><br/>
-            {% endfor %}
-            {{ form.heading(class="form-control") }}
-        </div>
-        <div class="form-group">
-            {{ form.post.label }}
-            <i class="far fa-question-circle fa-sm pl-2 text-dark"
-            style="text-decoration:none" data-toggle="tooltip" data-placement="top"
-            title='Hint: Add a summary break by adding &lt;p&gt;br&lt;a id="br"&gt;&lt;/a&gt;&lt;/p&gt;'>
-            </i>
-            {% for error in form.post.errors %}
-                <span style="color:red">[ {{ error }} ]</span><br/>
-            {% endfor %}
-            {{ form.post(class="form-control",rows=12) }}
-        </div>
-        <div class="form-group">
-            {{ form.tags.label }}
-            {% for error in form.tags.errors %}
-                <span style="color:red">[ {{ error }} ]</span><br/>
-            {% endfor %}
-            {{ form.tags(class="form-control") }}
-        </div>
-        <div class="form-group">
-            {{ form.submit(class="btn btn-md btn-buttons") }}
-        </div>
-    </form>
-</div>
+<form action="{{ url_for('post.add_post') }}"  method="post">
+    {{ form.csrf_token }}
+    <div class="formstacked">
+        {{ form.heading.label }}
+        {% for error in form.heading.errors %}
+            <span style="color: red;">[ {{ error }} ]</span><br/>
+        {% endfor %}
+        {{ form.heading }}
+
+        {{ form.post.label }}
+        <div class="minor-text">Hint: Add a summary break by adding &lt;p&gt;br&lt;a id="br"&gt;&lt;/a&gt;&lt;/p&gt;'></div>
+        {% for error in form.post.errors %}
+            <span style="color:red">[ {{ error }} ]</span><br/>
+        {% endfor %}
+        {{ form.post(rows=12) }}
+
+        {{ form.tags.label }}
+        {% for error in form.tags.errors %}
+            <span style="color:red">[ {{ error }} ]</span><br/>
+        {% endfor %}
+        {{ form.tags }}
+
+        {{ form.submit(class="submit-btn") }}
+    </div>
+</form>
 {% endblock %}
 
 {% block scripts %}
